# SPOITE

./: .gitignore  DESIGN_CHANGELOG.md  README.md  experiment_design.md  pyproject.toml
configs/: README.md  final.json
docs/: data_audit.md
experiments/: README.md  aggregate_results.py  run_appendix_clipping.py  run_experiment1.py  run_experiment2.py  run_experiment3.py  run_experiment4.py
outputs/: README.md
outputs/final/: .gitkeep  MANIFEST.json  experiment_1_paired_contrasts.csv  experiment_1_ranking_reversals.csv  experiment_1_rows.csv  experiment_1_summary.csv  experiment_2_geometry.csv  experiment_3_rows.csv  experiment_3_summary.csv
outputs/provisional/: .gitkeep
outputs/smoke/: .gitkeep
src/spoite/: __init__.py  config.py  pipeline.py  provenance.py
src/spoite/causal/: __init__.py  dr.py
src/spoite/data/: __init__.py  base.py  benchmarks.py  synthetic.py
src/spoite/evaluation/: __init__.py  metrics.py
src/spoite/methods/: __init__.py  features.py  learners.py
src/spoite/optimization/: __init__.py  allocation.py
tests/: README.md  test_allocation.py  test_benchmark_adapters.py  test_causal.py  test_data_contract.py  test_pipeline_smoke.py  test_provenance.py  test_synthetic.py
