[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spoite-experiment"
version = "0.1.0"
description = "Question-driven empirical implementation for SPOITE"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    # NumPy 2.2 + Apple Accelerate leaves spurious IEEE flags after finite
    # BLAS matmul operations. Tests and public pipeline boundaries explicitly
    # assert finiteness; suppress only these backend messages.
    "ignore:divide by zero encountered in matmul:RuntimeWarning",
    "ignore:overflow encountered in matmul:RuntimeWarning",
    "ignore:invalid value encountered in matmul:RuntimeWarning",
]
